# relearn

./: .envrc  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  clippy.toml
benches/: agents.rs  features.rs  multithread.rs  rnn.rs  rust.rs  spaces.rs  tch.rs
examples/: cartpole-dqn.rs  cartpole-trpo.rs  chain-tabular-q.rs
relearn_derive/: Cargo.toml
relearn_derive/src/: indexed.rs  lib.rs  space.rs
relearn_experiments/: Cargo.toml
rust_rl_derive/: Cargo.toml
rust_rl_derive/src/: lib.rs
src/: error.rs  lib.rs  main.rs  sim_builder.rs  simulator.rs
src/agents/: agents.rs  batch.rs  batch_update.rs  builder.rs  dyn.rs  error.rs  finite.rs  meta.rs  mod.rs  pair.rs  random.rs  serial.rs  stateful.rs  tabular.rs  testing.rs
src/agents/bandits/: mod.rs  thompson_sampling.rs  ucb.rs
src/agents/buffers/: iter.rs  mod.rs  null.rs  replay.rs  serial.rs  simple.rs  vec.rs
src/agents/history/: basic.rs  mod.rs
src/agents/multithread/: batch.rs  boxing.rs  mod.rs  mutex.rs
src/agents/torch/: gae_policy_gradient.rs  history.rs  mod.rs  policy_gradient.rs  vpg.rs  vpg_gae.rs
src/agents/torch/history/: buffer.rs  features.rs  mod.rs
src/agents/torch/step_value/: gae.rs  mod.rs
src/cli/: agent.rs  critic.rs  env.rs  hook.rs  logger.rs  mod.rs  optimizer.rs  options.rs  opts.rs  policy.rs  seq_mod.rs  simulator.rs  step_value.rs  updater.rs
src/defs/: agent.rs  critic.rs  env.rs  hook.rs  mod.rs  optimizer.rs  policy.rs  seq_mod.rs  simulator.rs  step_value.rs  updater.rs
src/envs/: as_stateful.rs  bandits.rs  builder.rs  builders.rs  cartpole.rs  chain.rs  envs.rs  mdps.rs  memory.rs  meta.rs  mod.rs  partition.rs  stateful.rs  step_limit.rs  testing.rs
src/envs/multiagent/: fruit.rs  mod.rs  views.rs
src/envs/wrappers/: mod.rs  step_limit.rs
src/feedback/: mod.rs  reward.rs  tuple.rs
src/loggers/: cli.rs  mod.rs
src/logging/: chunk.rs  chunk_by_counter.rs  chunk_by_time.rs  cli.rs  display.rs  forwarding.rs  mod.rs  multithread.rs  null.rs  sync.rs  tensorboard.rs
src/simulation/: agents.rs  environments.rs  hooks.rs  iter.rs  log_steps.rs  mod.rs  multithread.rs  pair.rs  parallel.rs  serial.rs  simulator.rs  spaces.rs  steps.rs  summary.rs  take_episodes.rs  take_steps.rs  train.rs
src/simulator/: agents.rs  environments.rs  mod.rs  simulator.rs
src/spaces/: array.rs  boolean.rs  categorical.rs  finite.rs  index.rs  indexed_type.rs  interval.rs  mod.rs  ndarray.rs  nonempty_features.rs  option.rs  power.rs  product.rs  rl.rs  singleton.rs  test_derive.rs  testing.rs  tuple.rs  wrapper.rs
src/torch/: activations.rs  backends.rs  builder.rs  configs.rs  features.rs  initializers.rs  macros.rs  mod.rs  optimizers.rs  packed.rs  policy.rs  utils.rs
src/torch/agents/: actor.rs  actor_critic.rs  dqn.rs  features.rs  mod.rs  policy.rs  policy_gradient.rs  schedules.rs  trpo.rs
src/torch/agents/critic/: gae.rs  mod.rs  return.rs
src/torch/agents/critics/: mod.rs  opt.rs  rtg.rs
src/torch/agents/learning_critic/: gradient.rs  mod.rs
src/torch/agents/learning_policy/: mod.rs  ppo.rs  trpo.rs  vpg.rs
src/torch/agents/policies/: actor.rs  mod.rs  ppo.rs  reinforce.rs  trpo.rs
src/torch/agents/tests/: dqn.rs  mod.rs  policy_gradient.rs  ppo.rs  trpo.rs
src/torch/configs/: as_stateful.rs  mlp.rs  mod.rs  rnn.rs  seq_regressor.rs  stacked.rs
src/torch/critic/: gae.rs  mod.rs
src/torch/distributions/: bernoulli.rs  categorical.rs  deterministic.rs  mod.rs
src/torch/history/: buffer.rs  features.rs  mod.rs
src/torch/modules/: activations.rs  builder.rs  chain.rs  map.rs  mlp.rs  mod.rs  tch_.rs  testing.rs
src/torch/modules/ff/: activation.rs  func.rs  linear.rs  mlp.rs  mod.rs
src/torch/modules/seq/: as_seq.rs  mod.rs
src/torch/modules/seq/rnn/: config.rs  gru.rs  lstm.rs  mod.rs
src/torch/optimizers/: conjugate_gradient.rs  coptimizer.rs  mod.rs
src/torch/seq_modules/: as_stateful.rs  box.rs  iter_map.rs  mod.rs  module.rs  rnn.rs  seq_regressor.rs  stacked.rs  testing.rs  with_state.rs
src/torch/seq_modules/rnn/: config.rs  gru.rs  lstm.rs  mod.rs
src/torch/step_value/: gae.rs  mod.rs
src/torch/tensors/: exclusive.rs  mod.rs
src/torch/updaters/: critic_loss.rs  mod.rs  policy_gradient.rs  policy_trpo.rs  ppo.rs  trpo.rs  with_optimizer.rs
src/utilities/: iter.rs  mod.rs  order.rs
src/utils/: any.rs  array.rs  borrow.rs  cast.rs  coord_vector.rs  distributions.rs  fmt.rs  iter.rs  mod.rs  num_array.rs  order.rs  packed.rs  save.rs  sequence.rs  slice.rs  stats.rs  tensor.rs  vector.rs
src/utils/iter/: chain.rs  cmp.rs  differences.rs  mod.rs  rand.rs  split_chunks.rs
src/utils/tensor/: serialize.rs
src/utils/torch/: exclusive_tensor.rs  mod.rs  serialize.rs
