[package]
name = "relearn"
version = "0.1.2"
authors = ["Eric Langlois <eric@langlois.xyz>"]
edition = "2018"
description = "A Reinforcement Learning library"
license = "LGPL-3.0-only"
repository = "https://github.com/edlanglois/relearn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"
enum-map = "1.1"
impl-trait-for-tuples = "0.2"
lazycell = "1.3"
ndarray = "0.15"
ndarray-stats = "0.5"
num-traits = "0.2"
num_cpus = "1.13"
once_cell = "1.8"
rand = "0.8"
rand_distr = "0.4"
relearn_derive = { version = "0.1.0", path = "relearn_derive" }
smallvec = { version = "1.6", features = ["union"] }
tch = "0.5"
thiserror = "1.0"

[dev-dependencies]
rstest = "0.7.0"
criterion = { version = "0.3", features = ["html_reports"] }

[features]
doc-only = ["tch/doc-only"]

[package.metadata.docs.rs]
features = [ "doc-only" ]

[[bench]]
name = "rust"
harness = false

[[bench]]
name = "features"
harness = false

[[bench]]
name = "multithread"
harness = false

[[bench]]
name = "rnn"
harness = false

[[bench]]
name = "tch"
harness = false
