[package]
name = "relearn"
version = "0.1.2"
authors = ["Eric Langlois <eric@langlois.xyz>"]
edition = "2021"
description = "A Reinforcement Learning library"
license = "LGPL-3.0-only"
repository = "https://github.com/edlanglois/relearn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.0"
coarsetime = "0.1.21"
crossbeam = "0.8"
enum-map = "2.0"
lazycell = "1.3"
ndarray = { version = "0.15", features = ["serde"] }
ndarray-stats = "0.5"
num-traits = "0.2"
once_cell = "1.10"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
relearn_derive = { version = "0.1.0", path = "relearn_derive" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde-big-array = { version = "0.3", features = ["const-generics"] }
serde_bytes = "0.11"
serde_cbor = "0.11" # Archived but alternative 'ciborium' is very new
slice-of-array = "=0.3.1" # pinned b/c low popularity; audit code on change
smallvec = { version = "1.7", features = ["union"] }
tch = "0.6"
tensorboard-rs = "=0.2.4" # pinned b/c low popularity; audit code on change
thiserror = "1.0"
yansi = "0.5.0"

[dev-dependencies]
chrono = "0.4"
criterion = { version = "0.3", features = ["html_reports"] }
ctor = "0.1"
num_cpus = "1.13"
rstest = "0.12"
serde_test = "1.0"

[features]
doc-only = ["tch/doc-only"]

[package.metadata.docs.rs]
features = [ "doc-only" ]

[[bench]]
name = "agents"
harness = false

[[bench]]
name = "rnn"
harness = false

[[bench]]
name = "spaces"
harness = false
