[package]
name = "relearn"
version = "0.3.0"
authors = ["Eric Langlois <eric@langlois.xyz>"]
edition = "2021"
description = "A Reinforcement Learning library"
license = "LGPL-3.0-only"
repository = "https://github.com/edlanglois/relearn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.0"
coarsetime = "0.1.21"
crossbeam = "0.8"
derive_more = "0.99.17"
enum-map = "2.0"
log = "0.4"
ndarray = { version = "0.15", features = ["serde"] }
ndarray-stats = "0.5"
num-traits = "0.2"
once_cell = "1.10"
rand = "0.8"
rand_chacha = { version = "0.3", features = ["serde1"] }
rand_distr = "0.4"
relearn_derive = { version = "0.3.0", path = "relearn_derive" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde-big-array = { version = "0.4" }
serde_with = "2.0.0"
slice-of-array = "=0.3.2" # pinned b/c low popularity; audit code on change
smallvec = { version = "1.7", features = ["union"] }
tch = "0.8"
tensorboard-rs = "=0.5.9" # pinned b/c low popularity; audit code on change
thiserror = "1.0"
yansi = "0.5.0"

[dev-dependencies]
chrono = "0.4"
criterion = { version = "0.3", features = ["html_reports"] }
ctor = "0.1"
env_logger = "0.9.0"
num_cpus = "1.13"
rstest = "0.15"
serde_cbor = "0.11" # Archived but alternative 'ciborium' is very new
serde_json = "1.0"
serde_test = "1.0"

[features]
doc-only = ["tch/doc-only"]

[package.metadata.docs.rs]
features = [ "doc-only" ]

[[bench]]
name = "agents"
harness = false

[[bench]]
name = "rnn"
harness = false

[[bench]]
name = "spaces"
harness = false
