[package]
name = "relearn_derive"
version = "0.1.0"
authors = ["Eric Langlois <eric@langlois.xyz>"]
edition = "2018"
description = "Derive macros for the relearn package"
license = "LGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro=true

[dependencies]
syn="1.0"
quote="1.0"
