[package]
name = "relearn_derive"
version = "0.3.0"
authors = ["Eric Langlois <eric@langlois.xyz>"]
edition = "2021"
description = "Derive macros for the relearn package"
license = "LGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro=true

[dependencies]
proc-macro2 = "1.0"
quote="1.0"
syn="1.0"

[dev-dependencies]
ndarray = "0.15"
num-traits = "0.2"
rand = "0.8"
relearn = { version = "0.2.0", path = ".." }

[features]
doc-only = ["relearn/doc-only"]

[package.metadata.docs.rs]
features = [ "doc-only" ]
