[package]
name = "relearn_experiments"
version = "0.3.0"
authors = ["Eric Langlois <eric@langlois.xyz>"]
edition = "2021"
description = "Reinforcement learning experiments"
license = "LGPL-3.0-only"
repository = "https://github.com/edlanglois/relearn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "3.1", features = ["derive"] }
num_cpus = "1.13"
rand = "0.8"
relearn = { version = "0.3.0", path = ".." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tch = "0.8"
thiserror = "1.0"
xdg = "2.1"

[profile.release]
lto = true
